kustomize/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rule-of-law-reporting
spec:
  selector:
    app: rule-of-law-reporting
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
