kustomize/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rule-of-law-reporting
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - rolr.pravna-mreza.si
      secretName: rule-of-law-reporting-tls
  rules:
    - host: rolr.pravna-mreza.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rule-of-law-reporting
                port:
                  number: 80
